# hikari

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  REUSE.toml  clippy.toml  docker-compose.yml
crates/hikari/: Cargo.toml
crates/hikari-bench/: Cargo.toml
crates/hikari-bench/src/: error.rs  main.rs  oidc.rs  opt.rs  user.rs
crates/hikari-cli/: Cargo.toml
crates/hikari-cli/src/: cli.rs  main.rs
crates/hikari-cli/src/cli/: opt.rs  run.rs  validate.rs
crates/hikari-common/: Cargo.toml
crates/hikari-common/components/: DateInput.json  DurationInput.json  JournalTitleInput.json  NumberInput.json
crates/hikari-common/src/: csml_utils.rs  error.rs  lib.rs
crates/hikari-common/src/error/: bots.rs
crates/hikari-config/: Cargo.toml
crates/hikari-config/src/: assessment.rs  constants.rs  documents.rs  generic.rs  global.rs  lib.rs  module.rs
crates/hikari-config/src/assessment/: error.rs  question.rs  scale.rs  v01.rs
crates/hikari-config/src/constants/: collection.rs  constant.rs  v01.rs
crates/hikari-config/src/documents/: collection.rs  document.rs  v01.rs
crates/hikari-config/src/global/: access.rs  frontend.rs  journal.rs  modules.rs  onboarding.rs  user.rs  v01.rs
crates/hikari-config/src/module/: assessment.rs  content.rs  error.rs  llm_agent.rs  milestone.rs  next_session.rs  session.rs  unlock.rs  v01.rs
crates/hikari-config/test_configs/: test.assessment.yaml  test.collection.yaml  test.constants.yaml  test.global.yaml  test.module.yaml
crates/hikari-core/: Cargo.toml
crates/hikari-core/src/: journal.rs  lib.rs  llm_config.rs  openai.rs  pgvector.rs  planner.rs  quiz.rs  status.rs  tts.rs  usage.rs
crates/hikari-core/src/journal/: assistant.rs  summarize.rs
crates/hikari-core/src/openai/: error.rs  streaming.rs  tools.rs
crates/hikari-core/src/pgvector/: documents.rs  embedder.rs  error.rs
crates/hikari-core/src/planner/: error.rs
crates/hikari-core/src/quiz/: error.rs  evaluation.rs  question.rs
crates/hikari-core/src/tts/: cache.rs  config.rs  error.rs  streaming.rs
crates/hikari-db/: Cargo.toml
crates/hikari-db/src/: groups.rs  history.rs  journal.rs  lib.rs  planner.rs  quiz.rs  util.rs
crates/hikari-db/src/access_tokens/: mutation.rs  query.rs
crates/hikari-db/src/config/: mutation.rs  query.rs
crates/hikari-db/src/history/: mutation.rs  query.rs
crates/hikari-db/src/oidc_mapping/: mutation.rs  query.rs
crates/hikari-db/src/tag/: mutation.rs  query.rs
crates/hikari-db/src/user/: mutation.rs  query.rs
crates/hikari-db/src/user_context_logs/: mutation.rs  query.rs
crates/hikari-db/src/user_handle/: mutation.rs  query.rs
crates/hikari-db/tests/: config.rs  mock.rs  module.rs  user.rs  user_handle.rs
crates/hikari-db/tests/common/: mod.rs  postgres.sql  sqlite.sql  user.rs
crates/hikari-entity/: Cargo.toml
crates/hikari-entity/src/: access_tokens.rs  assessment.rs  config.rs  custom_groups.rs  groups_token.rs  history.rs  journal.rs  lib.rs  llm.rs  module.rs  oidc_groups.rs  oidc_mapping.rs  planner_entry.rs  planner_ical_token.rs  planner_milestone.rs  tag.rs  user.rs  user_context_logs.rs  user_handle.rs
crates/hikari-entity/src/assessment/: answer.rs  session.rs
crates/hikari-entity/src/history/: history_assessment.rs  history_module.rs  history_session.rs
crates/hikari-entity/src/journal/: entity_linked.rs  journal_content.rs  journal_entry.rs  journal_entry_journal_prompt.rs  journal_entry_tag.rs  journal_prompt.rs  journal_summary.rs  journal_topic.rs
crates/hikari-entity/src/llm/: conversation.rs  conversation_state.rs  message.rs  slot.rs  tts.rs  usage.rs
crates/hikari-entity/src/module/: assessment.rs  status.rs
crates/hikari-entity/src/quiz/: question.rs  quiz.rs  quiz_sessions.rs  score.rs
crates/hikari-http/: Cargo.toml
crates/hikari-http/src/: core.rs  error.rs  lib.rs  reqwest.rs  retry.rs
crates/hikari-llm/: Cargo.toml
crates/hikari-llm/src/: builder.rs  execution.rs  lib.rs  utils.rs
crates/hikari-llm/src/builder/: error.rs  slot.rs  steps.rs  tools.rs
crates/hikari-llm/src/execution/: agent.rs  bubble.rs  core.rs  error.rs  iterator.rs  steps.rs  tools.rs  utils.rs
crates/hikari-llm/test_configs/: test.agemt.yaml
crates/hikari-model/: Cargo.toml
crates/hikari-model-tools/: Cargo.toml
crates/hikari-model-tools/src/: convert.rs  error.rs
crates/hikari-model-tools/src/convert/: history.rs  journal.rs  llm.rs  module.rs  planner.rs  quiz.rs  user.rs  user_context_log.rs  user_handle.rs
crates/hikari-model/src/: assessment.rs  chat.rs  history.rs  journal.rs  lib.rs  llm.rs  login.rs  module.rs  planner.rs  quiz.rs  status.rs  tag.rs  user.rs  user_context_log.rs  user_handle.rs
crates/hikari-model/src/assessment/: scales.rs  session.rs
crates/hikari-model/src/journal/: content.rs  partial.rs
crates/hikari-model/src/llm/: conversation.rs  message.rs  slot.rs  state.rs  vector.rs
crates/hikari-model/src/module/: assessment.rs  group.rs  instance.rs  session.rs
crates/hikari-model/src/quiz/: question.rs  quiz.rs  quiz_sessions.rs  score.rs
crates/hikari-oidc/: Cargo.toml
crates/hikari-oidc/resources/test/: jwks.json  oidc-configuration.json
crates/hikari-oidc/src/: jwks.rs  lib.rs  oidc.rs  refresh.rs  test_utils.rs
crates/hikari-server/: Cargo.toml
crates/hikari-server/src/: app.rs  auth.rs  data.rs  db.rs  main.rs  opt.rs  permissions.rs  routes.rs  setup.rs  user.rs
crates/hikari-server/src/data/: bots.rs  csml.rs  opt.rs
crates/hikari-server/templates/: hello.html  login.html
crates/hikari-test-helpers/: Cargo.toml
crates/hikari-test-helpers/src/: lib.rs  postgresql.rs  sqlite.rs  util.rs
crates/hikari-tools/: Cargo.toml
crates/hikari-tools/src/: cli.rs  main.rs
crates/hikari-utils/: Cargo.toml
crates/hikari-utils/src/: args.rs  audio.rs  date.rs  id_map.rs  lib.rs  loader.rs  net.rs  tracing.rs  values.rs
crates/hikari-worker/: Cargo.toml
crates/hikari-worker/src/: main.rs  opt.rs  routes.rs
crates/hikari/src/: client.rs  error.rs  lib.rs
(+376 files in other folders)
