[workspace]
members = [
    "crates/*"
]
default-members = ["crates/hikari-cli"]
resolver = "3"

[workspace.lints.clippy]
clone_on_ref_ptr = "warn"
unwrap_in_result = "warn"
unreachable = "warn"
unimplemented = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
implicit_clone = "warn"
string_add = "warn"
todo = "warn"
ref_patterns = "warn"
dbg_macro = "warn"
as_underscore = "warn"
unwrap_used = "deny"
indexing_slicing = "deny"
# Disallowing panic and expect in the future would probably be a good idea
#panic = "deny"
#expect_used = "deny"

[profile.release]
lto = "thin"
strip = "none"

