[package]
name = "hikari-bench"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Sven Scheu <itssvens@gmail.com>"]

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.57", features = ["derive"] }
csv-async = { version = "1.3.1", features = ["tokio"] }
openidconnect = { version = "4.0.1", default-features = true }
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.226", features = ["derive"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "fs"] }
tokio-stream = { version = "0.1.17", features = ["fs"] }
hikari = { path = "../hikari" }
futures = "0.3.32"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["registry", "std"] }
url = "2.5.7"
