[package]
name = "hikari-common"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Sven Scheu <itssvens@gmail.com>"]

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.31", features = ["async-await"] }
csml_engine = { git = "https://github.com/amsl-app/csml-engine", tag = "v2.0.0", features = [] }
csml_interpreter = { git = "https://github.com/amsl-app/csml-engine", tag = "v2.0.0" }
serde_json = "1.0.145"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
uuid = {version = "1.21.0", features = ["v4", "fast-rng", "macro-diagnostics"]}

[dev-dependencies]
tracing-subscriber = "0.3.20"
test-log = { version = "0.2.18", default-features = false, features = ["trace"] }
