[package]
name = "hikari-config"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Sven Scheu <itssvens@gmail.com>"]

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
serde = "1.0.226"
serde_derive = "1.0.226"
serde_json = "1.0.145"
serde_yml = "0.0.12"
serde_with = "3.14.1"
schemars = { version = "1.1.0", features = ["raw_value", "chrono04", "url2"] }
indexmap = { version = "2.11.4", features = ["serde", "rayon"] }
utoipa = { version = "5.4.0", features = ["indexmap", "uuid", "chrono", "url"] }
tracing = "0.1.41"
thiserror = "2.0.16"
hikari-utils = { path = "../hikari-utils" }
futures = { version = "0.3.32", features = ["async-await"] }
strum = { version = "0.27.2", features = ["derive"] }
url = { version = "2.5.7", features= ["serde"] }
heck = "0.5.0"

[lints]
workspace = true
