[package]
name = "hikari-core"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Sven Scheu <itssvens@gmail.com>"]

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
async-openai = "0.29.3"
base64 = "0.22.1"
chrono = "0.4.42"
futures-retry-policies = { version = "0.3.1", features = [
    "tokio",
    "tracing",
    "retry-policies"
] }
html-escape = "0.2.13"
hikari-db = { path = "../hikari-db" }
hikari-entity = { path = "../hikari-entity" }
hikari-model = { path = "../hikari-model" }
hikari-config = { path = "../hikari-config" }
hikari-model-tools = { path = "../hikari-model-tools" }
hikari-utils = { path = "../hikari-utils" }
sea-orm = { version = "1.1.16", features = [
    "macros",
    "sqlx-postgres",
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "with-uuid",
    "with-json",
    "debug-print",
    "postgres-array"
] }
serde = "1.0.226"
serde_derive = "1.0.226"
serde_json = "1.0.145"
sha2 = { version = "0.10.9" }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
typed-builder = "0.23.2"
tracing = "0.1.41"
utoipa = { version = "5.4.0" }
pdf-extract = "0.10.0"
futures = "0.3.31"
hex = "0.4.3"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
async-trait = "0.1.89"
async-stream = "0.3.6"
unicode-segmentation = "1.12.0"
regex = "1.11.2"
rand = { version = "0.10.0", features = ["std"] }
reqwest = "0.12.23"
backoff = "0.4.0"
num-traits = "0.2.19"
elevenlabs_rs = { version = "0.6.0", features = [
    "ws",
    "genai",
    "admin"
], default-features = false }
url = "2.5.7"
tokio-stream = "0.1.17"
lazy_static="1.5.0"
shared_stream = "0.2.1"
