[package]
name = "hikari-db"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Sven Scheu <itssvens@gmail.com>"]

[lints]
workspace = true

[dependencies]

base64 = "0.22.1"
chrono = "0.4.42"
futures-util = "0.3.31"
paste = "1.0.15"
rand = "0.9"
ring = "0.17.14"
tracing = "0.1.41"
uuid = { version = "1.20", features = ["v4", "fast-rng", "serde"] }

sea-orm = { version = "1.1.16", features = ["macros", "sqlx-postgres", "sqlx-sqlite", "runtime-tokio-rustls", "with-uuid", "with-json", "debug-print"] }
sqlx = "0.8.6"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

strum = { version = "0.27.2", features = ["derive"] }

hikari-entity = { path = "../hikari-entity" }
hikari-model = { path = "../hikari-model" }

[dev-dependencies]
tokio = { version = "1.47.1", features = ["macros", "rt"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "registry", "std"] }
test-log = { version = "0.2.18", default-features = false, features = ["trace"] }

[features]
mock = ["sea-orm/mock"]

[[test]]
name = "mock"
required-features = ["mock"]
