[package]
name = "hikari-http"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Sven Scheu <itssvens@gmail.com>"]

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.89"
chrono = "0.4.42"
reqwest = { version = "0.13.2", features = ["json"] }
http = "1.3.1"
thiserror = "2.0.16"
retry-policies = "0.2.1"
futures-retry-policies = { version = "0.3.1" }

tracing = "0.1.41"
serde = "1.0.226"
tokio = "1.47.1"
openidconnect = "4.0.1"
