[package]
name = "hikari-llm"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Linus Bierhoff <linus.bierhoff@icloud.com>"]

[dependencies]
hikari-model = { path = "../hikari-model" }
hikari-config = { path = "../hikari-config" }
hikari-model-tools = { path = "../hikari-model-tools" }
hikari-core = { path = "../hikari-core" }
hikari-db = { path = "../hikari-db" }
hikari-utils = { path = "../hikari-utils" }
tokio = "1.47.1"
serde = "1.0.226"
serde_json = "1.0.145"
nonempty = { version = "0.12.0", features = ["serialize"] }
thiserror = "2.0.16"
sea-orm = { version = "1.1.16", features = [
    "macros",
    "sqlx-postgres",
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "with-uuid",
    "with-json",
    "debug-print",
] }
indexmap = "2.11.4"
futures-util = "0.3.31"
async-stream = "0.3.6"
futures-core = "0.3.31"
uuid = { version = "1.20.0", features = ["v4"] }
tracing = "0.1.41"
serde_yml = "0.0.12"
utoipa = "5.4.0"
num-traits = "0.2.19"
regex = "1.11.2"
async-openai = "0.29.3"
reqwest = "0.12.23"
eventsource-stream = "0.2.3"
schemars = { version = "1.1.0", features = ["raw_value"] }

[lints]
workspace = true
