[package]
name = "hikari-model-tools"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Sven Scheu <itssvens@gmail.com>"]

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hikari-entity = { path = "../hikari-entity" }
hikari-model = { path = "../hikari-model" }
hikari-config = { path = "../hikari-config" }
hikari-utils = { path = "../hikari-utils" }
chrono = "0.4.42"
num-traits = "0.2.19"
thiserror = "2.0.16"
base64 = "0.22.1"
serde_json = "1.0.145"
anyhow = "1.0.100"
serde_yml = "0.0.12"
