[package]
name = "hikari-model"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Sven Scheu <itssvens@gmail.com>"]

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
hikari-config = { path = "../hikari-config" }
csml_model = { version = "0.1.0", git = "https://github.com/amsl-app/csml-engine", tag = "v2.0.0" }
chrono = { version = "0.4.42", features = ["serde"] }
serde = "1.0.226"
serde_json = "1.0.145"
serde_yml = "0.0.12"
utoipa = { version = "5.4.0", features = ["indexmap", "uuid", "chrono"] }
strum = { version = "0.27.2", features = ["derive"] }
uuid = { version = "1.21.0", features = ["serde", "v4"] }
http = "1.3.1"
