[package]
name = "hikari-oidc"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
reqwest = { version = "0.13.2", features = ["json"] }
url = { version = "2.5.8", features = ["serde"] }
thiserror = "2.0.18"
serde = "1.0.228"
tokio = { version = "1.52.2", features = ["macros", "rt"] }
tracing = "0.1.41"
typed-builder = "0.23.2"

[dev-dependencies]
serde_json = "1.0.149"
test-log = { version = "0.2.20", default-features = false, features = ["trace"] }

[lints]
workspace = true
