[package]
name = "hikari-tools"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Linus Bierhoff <linus.bierhoff@icloud.com>"]

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0"
hikari-config = { path = "../hikari-config" }
hikari-llm = { path = "../hikari-llm" }
tokio = "1.47.1"
serde_json = "1.0.145"
clap = { version = "4.5.57", features = ["derive", "wrap_help"] }
schemars = "1.1.0"
