[package]
name = "hikari-utils"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Sven Scheu <itssvens@gmail.com>"]

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
aws-sdk-s3 = "1.106.0"
aws-config = "1.8.6"
aws-smithy-types = "1.3.2"
chrono = "0.4.42"
futures-util = "0.3.31"
hex = "0.4.3"
http = "1.3.1"
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio"] }
opentelemetry = { version = "0.30.0" }
opentelemetry-otlp = { version = "0.30.0", features = [
    "metrics",
    "trace",
    "grpc-tonic"
] }
opentelemetry-semantic-conventions = { version = "0.30.0", features = [
    "semconv_experimental"
] }
thiserror = "2.0.16"
tracing = "0.1.41"
tracing-core = "0.1.34"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing-opentelemetry = "0.31.0"
typed-builder = "0.23.2"
clap = { version = "4.5.57", features = ["derive"] }
sysinfo = "0.38.0"
sentry = { version = "0.46.0", features = ["tracing"] }
sentry-tracing = "0.46.0"
tokio = "1.47.1"
tower-layer = "0.3.3"
tower-service = "0.3.3"
listenfd = "1.0.2"
num-traits = "0.2.19"
url = "2.5.7"
async-stream = "0.3.6"
async-walkdir = "2.1.0"
serde_yml = "0.0.12"
futures = "0.3.31"
pdf-extract = "0.10.0"
xxhash-rust = {version="0.8.15", features = ["xxh3"]}
serde_json_path = "0.7.2"
serde_json = "1.0.145"
serde = "1.0.226"
indexmap = { version = "2.11.4", features = ["serde", "rayon"] }
