[package]
name = "hikari"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Sven Scheu <itssvens@gmail.com>"]

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.89"
chrono = "0.4.42"
http = "1.3.1"
hikari-http = { path = "../hikari-http" }
hikari-model = { path = "../hikari-model" }
serde = "1.0.226"
serde_json = "1.0.145"
thiserror = "2.0.16"
tokio = "1.47.1"
url = "2.5.7"
openidconnect = { version = "4.0.1", default-features = true }
retry-policies = "0.2.1"
futures-retry-policies = { version = "0.3.1" }
tracing = "0.1.41"
uri-url = "0.3.0"
